// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormField > renders with as correctly 1`] = `
"<section data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</section>"
`;

exports[`FormField > renders with class correctly 1`] = `
"<div data-slot="root" class="text-sm relative">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with default slot correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">Default slot
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with description slot correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <p id="v-0-0-description" data-slot="description" class="text-muted">Description slot</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with error correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-error" data-slot="error" class="mt-2 text-error">Username is already taken</div>
  </div>
</div>"
`;

exports[`FormField > renders with error slot correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-error" data-slot="error" class="mt-2 text-error">Error slot</div>
  </div>
</div>"
`;

exports[`FormField > renders with help correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-help" data-slot="help" class="mt-2 text-muted">Username must be unique</div>
  </div>
</div>"
`;

exports[`FormField > renders with help slot correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div id="v-0-0-help" data-slot="help" class="mt-2 text-muted">Help slot</div>
  </div>
</div>"
`;

exports[`FormField > renders with hint correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with hint slot correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with label and description correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with label slot correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Label slot</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="text-sm flex justify-between place-items-baseline gap-2">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with required correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default after:content-['*'] after:ms-0.5 after:text-error">Username</label>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size lg correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size md correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size sm correctly 1`] = `
"<div data-slot="root" class="text-xs">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size xl correctly 1`] = `
"<div data-slot="root" class="text-base">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with size xs correctly 1`] = `
"<div data-slot="root" class="text-xs">
  <div data-slot="wrapper" class="">
    <div data-slot="labelWrapper" class="flex content-center items-center justify-between gap-1"><label for="v-0-0" data-slot="label" class="block font-medium text-default">Username</label>
      <!--v-if-->
    </div>
    <p id="v-0-0-description" data-slot="description" class="text-muted">Enter your username</p>
  </div>
  <div class="relative mt-1">
    <!--v-if-->
  </div>
</div>"
`;

exports[`FormField > renders with ui correctly 1`] = `
"<div data-slot="root" class="text-sm">
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <!--v-if-->
  </div>
</div>"
`;
